--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<!-- THE BIG META -->
-	<title>What Happens Next? COVID-19 Futures, Explained With Playable Simulations</title>  <!-- TRANSLATE -->
+	<title>다음에 무슨 일이 일어날까요? COVID-19 미래, Explained With Playable Simulations</title>  <!-- TRANSLATE -->
 	<meta name="description" content="an interactive guide" />  <!-- TRANSLATE: content -->
 	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset="utf-8">
