--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <head>
 
 	<!-- THE BIG META -->
-	<title>다음에 무슨 일이 일어날까요? COVID-19 미래, Explained With Playable Simulations</title>  <!-- TRANSLATE -->
-	<meta name="description" content="an interactive guide" />  <!-- TRANSLATE: content -->
+	<title>다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래</title>  <!-- TRANSLATE -->
+	<meta name="description" content="상호작용 가이드" />  <!-- TRANSLATE: content -->
 	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset="utf-8">
 	<base target="_blank">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">  <!-- TRANSLATE: content -->
-	<meta name="twitter:description" content="an interactive guide">  <!-- TRANSLATE: content -->
+	<meta name="twitter:title" content="다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래">  <!-- TRANSLATE: content -->
+	<meta name="twitter:description" content="상호작용 가이드">  <!-- TRANSLATE: content -->
 	<meta name="twitter:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">  <!-- TRANSLATE: content -->
+	<meta property="og:title" content="다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래">  <!-- TRANSLATE: content -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ncase.me/covid-19/">
 	<meta property="og:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
-	<meta property="og:description" content="an interactive guide">  <!-- TRANSLATE: content -->
-	<meta property="og:site_name" content="What Happens Next? COVID-19 Futures, Explained With Playable Simulations">  <!-- TRANSLATE: content -->
+	<meta property="og:description" content="상호작용 가이드">  <!-- TRANSLATE: content -->
+	<meta property="og:site_name" content="다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래">  <!-- TRANSLATE: content -->
 	
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/littlefoot.css"/>
