Sidebars & Footer of index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<!-- THE BIG META -->
 	<title>다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래</title>  <!-- TRANSLATE -->
-	<meta name="description" content="상호작용 가이드" />  <!-- TRANSLATE: content -->
+	<meta name="description" content="상호작용 안내서" />  <!-- TRANSLATE: content -->
 	<link rel="icon" type="image/png" href="favicon.png">
 	<meta charset="utf-8">
 	<base target="_blank">
@@ -13,7 +13,7 @@
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래">  <!-- TRANSLATE: content -->
-	<meta name="twitter:description" content="상호작용 가이드">  <!-- TRANSLATE: content -->
+	<meta name="twitter:description" content="상호작용 안내서">  <!-- TRANSLATE: content -->
 	<meta name="twitter:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
 
 	<!-- Open Graph data -->
@@ -21,7 +21,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ncase.me/covid-19/">
 	<meta property="og:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
-	<meta property="og:description" content="상호작용 가이드">  <!-- TRANSLATE: content -->
+	<meta property="og:description" content="상호작용 안내서">  <!-- TRANSLATE: content -->
 	<meta property="og:site_name" content="다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래">  <!-- TRANSLATE: content -->
 	
 	<!-- Styles -->
@@ -37,21 +37,21 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - -->
 
 <div id="translations">
-	No translations yet!
+	아직 번역이 없습니다!
 	<a href='https://github.com/ncase/covid-19#how-to-translate'>
-		Help make one?
+		도우시겠습니까?
 	</a>
 </div>
 
 <div id="sharing">
-	Help this guide
-	get R &gt; 1:
+	이 안내서가
+	R &gt; 1: 되도록
 	<br>
 	<span id='share_title'>
-		What Happens Next? COVID-19 Futures, Explained With Playable Simulations
+		다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 미래
 	</span>
 	<span id='share_desc'>
-		🔬 Here's a real deep dive! 30 min read/play:
+		🔬 한번 읽어보세요! 30 분 플레이/읽기:
 	</span>
 	<span class='shareables' style='display:block; margin-top:7px; opacity:0.75'></span>
 </div>
@@ -884,43 +884,42 @@
 
 	<div>
 		
-		Help this post get R > 1: <span class='shareables in_footer' style='position: relative; top: 17px; right: -6px;'></span>
+		이 안내서가 R > 1 되도록: <span class='shareables in_footer' style='position: relative; top: 17px; right: -6px;'></span>
 		<br><br>
-		This guide is
+		이 안내서는
 		<br>
 		<img src='sharing/cc0.png' style="margin-right: 10px; margin-top: 10px; width: 120px;"/>
 		<b style='font-size: 100px;position: relative;top: -24px;'>
-			PUBLIC DOMAIN
+			퍼블릭 도메인입니다.
 		</b>
-		That means you <i>already</i> have permission to re-use &amp; remix
-		any of the art/code/words on this page – on blogs, news sites, classrooms, anywhere!
+		다시 말해, <i>이미</i> 이 페이지의 그림/코드/글을 재사용하시거나 수정해서
+		블로그, 뉴스 사이트, 학교, 어디든 재배포할 권한이 있음을 의미합니다!
 		<a href='https://github.com/ncase/covid-19'>
-			(Swipe our code on Github)
+			(Github에서 저의 코드를 확인하세요.)
 		</a>
 		<br>
 		<b>
-			Just remember to credit
+			제작자만 명시해주세요.
 			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>Marcel Salathé</a>
 			&
-			<a href='https://ncase.me/'>Nicky Case</a>
-			(May 2020)
+			<a href='https://ncase.me/'>니키 케이스</a>
+			(2020년 5월)
 		</b>
 		
 		
 		<br><br>
 
-		This free, open-source guide was made possible thanks to
-		Nicky's supporters on Patreon.
-		If (seriously, ONLY IF) you have some disposible income in these hard times, you can
-		<a href='https://www.patreon.com/ncase'>throw coins at Nicky!</a>
-		If not, you can share this guide or
-		<a href='https://ncase.me/'>see their other educational art/interactives</a>.
-		(excellent for homeshooling if, say, schools are currently closed
-		due to a pandemic)
+		이 무료 오픈소스 안내서는 감사하신 분들 덕분에 가능했습니다.
+		니키 케이스의 패트론 서포터즈.
+		만약 (정말로!) 이 어려운 시기에 남아도는 돈이 있으시다면
+		<a href='https://www.patreon.com/ncase'>니키에게 던져주세요!</a>
+		아니면, 이 안내서를 공유하시거나
+		<a href='https://ncase.me/'>제 다른 교육적인 창작물을 확인하세요/interactives</a>.
+		(세계적 유행병으로 임시 휴교일 때, 집에서 공부하기 좋습니다)
 
 		<br><br>
 
-		Here's some of the generous Patrons who made this possible: 💖
+		후원자 분들 덕분에 가능했습니다: 💖
 
 		<br><br>
 
@@ -930,7 +929,7 @@
 
 		<br><br>
 
-		And <i>huge</i> thank you to these folks for playtesting/proofreading:
+		그리고 플레이 테스트와 검수를 도와주신 분들께 <i>대단히</i> 감사드립니다:
 		Alex Kreitzberg,
 		Amit Patel,
 		EmilyKate McDonough,
@@ -949,19 +948,19 @@
 
 		<br><br>
 
-		Any errors remaining are probably Nicky's fault.
+		남아있는 오류는 아마도 니키의 잘못일 겁니다.
 
 	</div>
 
 </div>
 
 <div id="footnotes_container">
-	<h2 id='show_feetnotes_button'>(Click to show Feetnotes)</h2>
-	<h2 id='shown_feetnotes'>Feetnotes:</h2-->
+	<h2 id='show_feetnotes_button'>(각주를 보시려면 클릭하세요)</h2>
+	<h2 id='shown_feetnotes'>각주:</h2-->
 </div>
 
 <div id="wash">
-	wash your hands! 👏
+	손 닦으세요! 👏
 </div>
 
 
