--- a/index.html
+++ b/index.html
@@ -890,17 +890,17 @@
 		<br>
 		<img src='sharing/cc0.png' style="margin-right: 10px; margin-top: 10px; width: 120px;"/>
 		<b style='font-size: 100px;position: relative;top: -24px;'>
-			퍼블릭 도메인입니다.
+			퍼블릭 도메인
 		</b>
-		다시 말해, <i>이미</i> 이 페이지의 그림/코드/글을 재사용하시거나 수정해서
+		다시 말해, <i>이미</i> 이 페이지의 그림/코드/글을 사용하시거나 수정해서
 		블로그, 뉴스 사이트, 학교, 어디든 재배포할 권한이 있음을 의미합니다!
 		<a href='https://github.com/ncase/covid-19'>
-			(Github에서 저의 코드를 확인하세요.)
+			(Github에서 제 코드를 확인하세요.)
 		</a>
 		<br>
 		<b>
 			제작자만 명시해주세요.
-			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>Marcel Salathé</a>
+			<a href='https://scholar.google.com/citations?user=_wHMGkUAAAAJ&hl=en'>마르셀 살라테</a>
 			&
 			<a href='https://ncase.me/'>니키 케이스</a>
 			(2020년 5월)
@@ -909,13 +909,12 @@
 		
 		<br><br>
 
-		이 무료 오픈소스 안내서는 감사하신 분들 덕분에 가능했습니다.
-		니키 케이스의 패트론 서포터즈.
-		만약 (정말로!) 이 어려운 시기에 남아도는 돈이 있으시다면
+		이 무료 오픈소스 안내서는 니키 케이스의 감사한 후원자 분들 덕분에 가능했습니다.
+		만약 (정말로!) 이 어려운 시기에 남는 돈이 있으시다면
 		<a href='https://www.patreon.com/ncase'>니키에게 던져주세요!</a>
 		아니면, 이 안내서를 공유하시거나
-		<a href='https://ncase.me/'>제 다른 교육적인 창작물을 확인하세요/interactives</a>.
-		(세계적 유행병으로 임시 휴교일 때, 집에서 공부하기 좋습니다)
+		<a href='https://ncase.me/'>제 다른 교육적인 창작물을 확인하세요</a>.
+		(세계적 유행병으로 임시 휴교일 때, 이걸로 집에서 공부하기 딱 좋습니다.)
 
 		<br><br>
 
@@ -955,7 +954,7 @@
 </div>
 
 <div id="footnotes_container">
-	<h2 id='show_feetnotes_button'>(각주를 보시려면 클릭하세요)</h2>
+	<h2 id='show_feetnotes_button'>(각주를 보시려면 클릭하세요.)</h2>
 	<h2 id='shown_feetnotes'>각주:</h2-->
 </div>
 
