--- a/index.html
+++ b/index.html
@@ -66,22 +66,21 @@
 	    <div>
 	        <iframe id="splash" width="960" height="480" src="banners/splash.html"></iframe>
 	        <div style="top: 70px;font-size: 75px;font-weight: bold;">
-	            What Happens Next?
-	        </div>
-	        <div style="font-weight: 500;top: 140px;left: 10px;font-size: 29px;">
-	            COVID-19 Futures, Explained With Playable Simulations
-	        </div>
-	        <div style="font-weight: 100;top: 189px;left: 10px;font-size: 19px;line-height: 21px;">
-	            <b>
-	                🕐 30 min play/read
-	                &nbsp;&middot;&nbsp;
-	            </b>
-	            by
-	            <a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">Marcel Salathé</a>
-	            (epidemiologist)
-	            &
-	            <a href="https://ncase.me/">Nicky Case</a>
-	            (art/code)
+	            다음에 무슨 일이 일어날까요?
+	    </div>
+		<div style="font-weight: 500;top: 140px;left: 10px;font-size: 29px;">
+			시뮬레이션으로 설명하는 COVID-19 이후의 미래
+		</div>
+		<div style="font-weight: 100;top: 189px;left: 10px;font-size: 19px;line-height: 21px;">
+			<b>
+				🕐 30 분 플레이/읽기
+				&nbsp;&middot;&nbsp;
+			</b>
+			<a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">마르셀 살라테</a>
+			(전염병학자)
+			&
+			<a href="https://ncase.me/">니키 케이스</a>
+			(그림/코드)
 	        </div>
 	    </div>
 	</div>
