forgot to translate 1 line

--- a/sim/index.html
+++ b/sim/index.html
@@ -225,8 +225,8 @@
 					</span>
 				</span>
 				<span id="pointer_scroll">
-					Once you're done playing around,
-					scroll down to keep reading!
+					시뮬레이션이 끝나시면,
+					아래로 스크롤 하세요!
 				</span>
 				<span id="pointer_replay">
 					This simulation has a "recorded scenario"!
