--- a/sim/index.html
+++ b/sim/index.html
@@ -225,13 +225,13 @@
 					</span>
 				</span>
 				<span id="pointer_scroll">
-					Once you're done playing around,
-					scroll down to keep reading!
+					시뮬레이션이 끝나시면,
+					아래로 스크롤 하세요!
 				</span>
 				<span id="pointer_replay">
-					This simulation has a "recorded scenario"!
+					이 시뮬레이션은 "기록된 시나리오"가 있습니다!
 					<br>
-					숫자를 변경하시기 <i>전에</i> "시작"을 클릭해 기록된 시뮬레이션을 먼저 보세요
+					숫자를 변경하시기 <i>전에</i> "시작"을 클릭해 기록된 시뮬레이션을 보세요
 				</span>
 			</div>
 		</div>
