--- a/sim/index.html
+++ b/sim/index.html
@@ -55,7 +55,7 @@
 
 				<div id="section_r">
 
-					R<sub>0</sub>는 <span id="label_p_r0" toFixed="2"></span>
+					R<sub>0</sub> = <span id="label_p_r0" toFixed="2"></span>
 					<canvas class="r_canvas" id="canvas_r0"></canvas>
 					<!--input class="sim_input" type="range" id="p_r0" min="0" max="6" step="0.01" disabled-->
 					<br>
@@ -109,7 +109,7 @@
 					</span>
 
 					<span id="label_re">
-						R은 <span id="label_p_re" toFixed="2"></span>
+						R = <span id="label_p_re" toFixed="2"></span>
 						<canvas class="r_canvas" id="canvas_re"></canvas>
 						<!--<input class="sim_input" type="range" id="p_re" min="0" max="6" step="0.01" disabled>-->
 					</span>
@@ -143,7 +143,7 @@
 				<div class="big_button">
 					<div id="bb_start">
 						<div class='control_icon' start></div>
-						Start
+						시작
 					</div>
 					<div id="bb_pause">
 						<div class='control_icon' pause></div>
@@ -231,7 +231,7 @@
 				<span id="pointer_replay">
 					이 시뮬레이션은 "기록된 시나리오"가 있습니다!
 					<br>
-					숫자를 변경하시기 <i>전에</i> "시작"을 클릭해 기록된 시뮬레이션을 보세요
+					숫자를 변경하시기 <i>전에</i> "시작"을 클릭해 기록된 시뮬레이션을 해보세요
 				</span>
 			</div>
 		</div>
