--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:image" content="https://ncase.me/covid-19/sharing/thumbnail.png">
 	<meta property="og:description" content="상호작용 안내서">  <!-- TRANSLATE: content -->
 	<meta property="og:site_name" content="다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 이후의 미래">  <!-- TRANSLATE: content -->
-	
+
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/littlefoot.css"/>
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -44,7 +44,7 @@
 </div>
 
 <div id="sharing">
-	이 안내서가
+	이 안내서가<br>
 	R &gt; 1: 되도록
 	<br>
 	<span id='share_title'>
@@ -891,8 +891,10 @@
 		<b style='font-size: 100px;position: relative;top: -24px;'>
 			퍼블릭 도메인
 		</b>
-		다시 말해, <i>이미</i> 이 페이지의 그림/코드/글을 사용하시거나 수정해서
-		블로그, 뉴스 사이트, 학교, 어디든 재배포할 권한이 있음을 의미합니다!
+		입니다.
+		<br>
+		다시 말해, 이 페이지의 그림/코드/글을 자유롭게 수정해서
+		블로그, 뉴스 사이트, 학교, 어디든 재배포 하실 수 있습니다!
 		<a href='https://github.com/ncase/covid-19'>
 			(Github에서 제 코드를 확인하세요.)
 		</a>
@@ -904,20 +906,20 @@
 			<a href='https://ncase.me/'>니키 케이스</a>
 			(2020년 5월)
 		</b>
-		
-		
+
+
 		<br><br>
 
-		이 무료 오픈소스 안내서는 니키 케이스의 감사한 후원자 분들 덕분에 가능했습니다.
-		만약 (정말로!) 이 어려운 시기에 남는 돈이 있으시다면
+		이 무료 오픈소스 안내서는 니키 케이스의 감사한 후원자 여러분들 덕분에 가능했습니다.
+		만약 (정말로!) 어려운 시기에 남는 돈이 있으시다면
 		<a href='https://www.patreon.com/ncase'>니키에게 던져주세요!</a>
-		아니면, 이 안내서를 공유하시거나
-		<a href='https://ncase.me/'>제 다른 교육적인 창작물을 확인하세요</a>.
-		(세계적 유행병으로 임시 휴교일 때, 이걸로 집에서 공부하기 딱 좋습니다.)
+		아니면 안내서를 공유하시거나
+		<a href='https://ncase.me/'>다른 교육적인 창작물을 확인하세요</a>.
+		(세계적 유행병으로 임시 휴교일 때, 집에서 공부하기 딱 좋습니다.)
 
 		<br><br>
 
-		후원자 분들 덕분에 가능했습니다: 💖
+		멋진 후원자 여러분들 덕분에 가능했습니다: 💖
 
 		<br><br>
 
