index.html sidebar fix

--- a/index.html
+++ b/index.html
@@ -37,16 +37,20 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - -->
 
 <div id="translations">
-	아직 번역이 없습니다!
-	<a href='https://github.com/ncase/covid-19#how-to-translate'>
-		도우시겠습니까?
-	</a>
+	원본/번역:
+	<ul>
+		<!-- IF YOU'RE MAKING A TRANSLATION, UN-COMMENT THE NEXT LINE -->
+		<li><a href='https://ncase.me/covid-19/'>영어(원본)</a></li>
+		<li><a href='https://eed3si9n.github.io/covid-19/'>日本語</a></li>
+		<li><a href='https://vrruiz.github.io/covid-19'>Español</a></li>
+		<li><a href='https://jusplathemus.github.io/covid-19/'>Magyar</a></li>
+	</ul>
 </div>
 
 <div id="sharing">
 	이 안내서가<br>
-	R &gt; 1: 되도록
-	<br>
+	R &gt; 1 되도록<br>
+	공유하세요.<br>
 	<span id='share_title'>
 		다음에 무슨 일이 일어날까요? 시뮬레이션으로 설명하는 COVID-19 미래
 	</span>
@@ -79,8 +83,11 @@
 			<a href="https://scholar.google.com/citations?user=_wHMGkUAAAAJ&amp;hl=en">마르셀 살라테</a>
 			(전염병학자)
 			&
-			<a href="https://ncase.me/">니키 케이스</a>
+			<a href="https://ncase.me/">Nicky Case</a>
 			(그림/코드)
+			&
+			<a>BENBENNBEN</a>
+			(번역)
 	        </div>
 	    </div>
 	</div>
@@ -282,7 +289,7 @@
 
 	<p>Not good.</p>
 
-	<p>That&#39;s what <a href="http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/report-9-impact-of-npis-on-covid-19/">the March 16 Imperial College report</a> found: do nothing, and we run out of ICUs, with more than 80% of the population getting infected. 
+	<p>That&#39;s what <a href="http://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/report-9-impact-of-npis-on-covid-19/">the March 16 Imperial College report</a> found: do nothing, and we run out of ICUs, with more than 80% of the population getting infected.
 	(remember: total cases <em>overshoots</em> herd immunity)</p>
 
 	<p>Even if only 0.5% of infected die – a generous assumption when there&#39;s no more ICUs – in a large country like the US, with 300 million people, 0.5% of 80% of 300 million = still 1.2 million dead... <em>IF we did nothing.</em></p>
@@ -882,7 +889,7 @@
 <div id="footer">
 
 	<div>
-		
+
 		이 안내서가 R > 1 되도록: <span class='shareables in_footer' style='position: relative; top: 17px; right: -6px;'></span>
 		<br><br>
 		이 안내서는
