--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 	원본/번역:
 	<ul>
 		<!-- IF YOU'RE MAKING A TRANSLATION, UN-COMMENT THE NEXT LINE -->
-		<li><a href='https://ncase.me/covid-19/'>영어(원본)</a></li>
+		<li><a href='https://ncase.me/covid-19/'>영어</a></li>
 		<li><a href='https://eed3si9n.github.io/covid-19/'>日本語</a></li>
 		<li><a href='https://vrruiz.github.io/covid-19'>Español</a></li>
 		<li><a href='https://jusplathemus.github.io/covid-19/'>Magyar</a></li>
+		<li><a href='https://benbennben.github.io/covid-19/'>한국어</a></li>
 	</ul>
 </div>
 
